[gd_scene load_steps=12 format=3 uid="uid://b7sficjs4shc1"]

[ext_resource type="Script" uid="uid://cbtf5ophjtr3l" path="res://scenes/ui/character_selector.gd" id="1_o2mfc"]
[ext_resource type="Texture2D" uid="uid://cpydvk8mq66o5" path="res://art/tile_0087.png" id="2_7fukd"]
[ext_resource type="Resource" uid="uid://d1h1wt7q0kmk8" path="res://scenes/run/run_startup.tres" id="2_qge5t"]
[ext_resource type="Texture2D" uid="uid://cqcal03735mv8" path="res://art/tile_0118.png" id="3_cg5wh"]
[ext_resource type="Texture2D" uid="uid://pgj8vfpj6tc5" path="res://art/tile_0130.png" id="4_8jm7y"]
[ext_resource type="Texture2D" uid="uid://bfvi02kojsa00" path="res://art/tile_0103.png" id="5_2wcqw"]

[sub_resource type="Gradient" id="Gradient_seiia"]
colors = PackedColorArray(0.279422, 0.172516, 1.20327e-07, 1, 0.171637, 0.171637, 0.171637, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xvgnm"]
gradient = SubResource("Gradient_seiia")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_bg2k7"]
font_size = 28
shadow_size = 3
shadow_color = Color(0.946933, 0.838449, 0.786749, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_b5qy7"]
font_size = 10
shadow_size = 0
shadow_color = Color(0.946933, 0.838449, 0.786749, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="ButtonGroup" id="ButtonGroup_7h0wh"]

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o2mfc")
run_startup = ExtResource("2_qge5t")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_xvgnm")

[node name="CharacterText" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -161.0
offset_top = 14.0
offset_right = 161.0
offset_bottom = 104.0
grow_horizontal = 2

[node name="Title" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "Warrior"
label_settings = SubResource("LabelSettings_bg2k7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "Likes to slice things up."
label_settings = SubResource("LabelSettings_b5qy7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 97.0
offset_right = 60.0
offset_bottom = 137.0
scale = Vector2(4, 4)
texture = ExtResource("2_7fukd")
expand_mode = 1
stretch_mode = 5

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -74.0
offset_right = -39.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
text = "Start
"

[node name="CharacterButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -22.0
offset_right = 218.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="WarriorButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_7h0wh")

[node name="Icon" type="TextureRect" parent="CharacterButtons/WarriorButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_cg5wh")
expand_mode = 1
stretch_mode = 5

[node name="WizardButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7h0wh")

[node name="Icon" type="TextureRect" parent="CharacterButtons/WizardButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8jm7y")
expand_mode = 1
stretch_mode = 5

[node name="AssassinButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7h0wh")

[node name="Icon" type="TextureRect" parent="CharacterButtons/AssassinButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_2wcqw")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CharacterButtons/WarriorButton" to="." method="_on_warrior_button_pressed"]
[connection signal="pressed" from="CharacterButtons/WizardButton" to="." method="_on_wizzard_button_pressed"]
[connection signal="pressed" from="CharacterButtons/AssassinButton" to="." method="_on_assassin_button_pressed"]
